mcc/Test/misc/valid/bin_number.c
int main()
{
	int a = 0b0110;
	return a;
}
 