mcc/Test/misc/invalid/same_argument_name.c
int foo(int a, int a)
{
	return 3;
}

int main()
{
	return 2;
}